# ds-bench

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARKING.md  README.md  docker-compose.yml  run-bench.sh
bench-history/: runlog.tsv
calibration/: pins.json
config/: ursula.toml
dockerfiles/: ds-bench.Dockerfile  durable-node.Dockerfile  durable-streams.Dockerfile  micro.Dockerfile  ursula-cloudbuild.yaml
docs/: 2026-06-19-server-findings-and-io_uring-readiness.md  2026-06-20-cpu-pinning-and-shared-fsync-design-note.md  2026-06-24-ursula-inmemory-report.md  2026-06-24-write-throughput-saturation-report.md  2026-06-24-zerocopy-comparison-report.md  RUNBOOK.md  benchmark-findings.md  benchmark-status.md  cloud-p1-rawpower-d39ad487.md  cloud-p2-scaleout-d39ad487.md  cloud-rawpower-report.md  cloud-scaleout-report.md  cloud-sustained-report.md  combined-report-remote-20260619.md  fan-out-outlier-diagnostic.md  final-report-2026-06-23.md  gke-cluster-setup.md  local-rawpower-report.md  local-scaleout-report.md  phase1-results.md  phase2-results.md  phase3-results.md
ds-bench/: .gcloudignore  ATTRIBUTION.md  Cargo.toml
ds-bench/src/: append.rs  bootstrap.rs  catch_up.rs  common.rs  dist.rs  fanout.rs  lib.rs  main.rs  mixed.rs  multi_fanout.rs  multi_stream.rs  reads.rs  sse_util.rs  sustained.rs
ds-bench/tests/: hdr_roundtrip.rs
gke/: bench-job.yaml  coordinator-job.yaml  ds-node-SKIPPED.md  durable-node.yaml  durable-streams.yaml  metrics-sidecar.yaml  micro-job.yaml  minio.yaml  s2lite.yaml  ursula-values.yaml  ursula.yaml
k8s/: bench-job.yaml  coordinator-job.yaml  durable-streams.yaml  kind-cluster.yaml  minio.yaml  results-pvc.yaml
micro/: README.md  aggregate.py  config.env  lib.sh  run.sh  stop.sh
(+454 files in other folders)
