[package]
name = "ds-bench"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Workload benchmark client for Durable Streams servers (durable-streams, ursula). Verbatim fork of ursula-bench."

[[bin]]
name = "ds-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1.7"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
hdrhistogram = "7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
wildcard_imports = "deny"
